@@ -1,3 +1,8 @@
+2003-11-08  Wakaba  <wakaba@suika.fam.cx>
+
+	* XML.pm (qname): Use new option of 'use_xml' and 'use_xmlns'.
+	(defined_new_namespace): Likewise.
+
 2003-11-01  Wakaba  <wakaba@suika.fam.cx>
 
 	* XML.pm (inner_xml): s/-$/&#45;/ if #comment node.
